--- a/style.css
+++ b/style.css
@@ -160,3 +160,48 @@ body {
 .lista__link:hover {
     color: var(--azul-terciaria);
 }
+
+
+@media screen and (max-width: 768px){
+
+    .container {
+        display: block;
+        background-image: none;
+    }
+
+    .container__imagem {
+        width: 50vw;
+    }
+
+    .container__box {
+        margin: 2em 2em;
+    }
+
+    .secundario {
+        text-align: center;
+        margin: 0;
+    }
+
+    .telas {
+        margin-left: 0;
+    }
+
+    .secundario__imagem {
+        width: 50vw;
+    }
+
+    .dispositivos__lista {
+        display: block;
+    }
+
+    .rodape__lista {
+        display: block;
+        margin-bottom: 1em;
+
+    }
+
+    .rodape__texto:last-child {
+        margin: 0;
+    }
+
+}
